samples/_failures_safe/1761548856_6280a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f55c9bea.c: In function ‘main’:
./samples/SAFE/__tmp_f55c9bea.c:156:34: error: missing terminating " character
  156 |         } else if (strcmp(input, "reset
      |                                  ^~~~~~
./samples/SAFE/__tmp_f55c9bea.c:156:9: error: expected expression at end of input
  156 |         } else if (strcmp(input, "reset
      |         ^
./samples/SAFE/__tmp_f55c9bea.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f55c9bea.c:156:9: error: expected declaration or statement at end of input
